--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
+    "@happy-dom/global-registrator": "^15.7.4",
     "@storybook/addon-essentials": "^8.3.4",
     "@storybook/addon-links": "^8.3.4",
     "@storybook/blocks": "^8.3.4",
     "@storybook/test": "^8.3.4",
     "@storybook/web-components": "^8.3.4",
     "@storybook/web-components-vite": "^8.3.4",
+    "@types/bun": "^1.1.10",
     "lit": "^3.2.0",
     "storybook": "^8.3.4",
     "typescript": "^5.5.3",
